update image product & product observer created
